# simple-translate-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  hello.py  main.py  pyproject.toml
functions/api/: Dockerfile  handler.py
functions/translate/: Dockerfile  handler.py
infra/: app.py  cdk.json
infra/stacks/: simple_translate_stack.py
src/: app.py  dependencies.py  lambda_events.py  settings.py
src/api/: dev.py  health.py  webhook.py
src/core/: helpers.py  lambda_handler.py  s3_client.py  s3_handler.py  scraper.py
src/functions/api/: Dockerfile  function.py
src/misc/: helpers.py  syncify.py
src/telegram/: bot.py  handlers.py
src/video/: compressor.py  dowloader.py  downloader.py  evaluator.py  scraper.py  translator.py  uploader.py
