[project]
name = "simple-translate-api"
version = "0.1.0"
description = "FastAPI server for downloading and translating videos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "boto3>=1.35.82",
    "fastapi[standard]>=0.115.5",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.2",
    "playwright>=1.49.0",
    "pydantic-settings>=2.6.1",
    "yt-dlp>=2024.11.18",
]

[dependency-groups]
dev = [
    "aws-cdk-lib>=2.173.1",
    "constructs>=10.4.2",
    "poethepoet>=0.31.1",
]

[tool.poe.tasks]
run = "fastapi dev"
