[project]
name = "simple-translate-api"
version = "0.1.0"
description = "FastAPI server for downloading and translating videos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.82",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "types-boto3-custom",
]

[project.optional-dependencies]
lambda = [
    "aws-lambda-typing>=2.20.0",
    "awslambdaric>=3.0.0",
]
api = [
    "fastapi[standard]>=0.115.5",
    "mangum>=0.19.0",
]
video = [
    "ffmpeg-python>=0.2.0",
    "yt-dlp>=2024.11.18",
    "playwright>=1.49.0",
]
telegram = [
    "aiogram>=3.15.0",
]

[dependency-groups]
dev = [
    "aws-cdk-lib>=2.173.1",
    "constructs>=10.4.2",
    "mypy>=1.13.0",
    "poethepoet>=0.31.1",
]

[tool.poe.tasks]
run = "fastapi dev"
generate-aws-types = [
    { cmd = "uvx mypy_boto3_builder ./vendored --download-static-stubs --product types-boto3-custom --output-type wheel --services lambda s3" },
    { cmd = "uv add vendored/types_boto3_custom-1.35.82-py3-none-any.whl" }
]
check-types = "mypy ."
install = 'uv sync --all-extras'


[tool.mypy]
exclude = ["infra/*"]
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "ffmpeg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yt_dlp.*"
ignore_missing_imports = true

[tool.uv.sources]
types-boto3-custom = { path = "vendored/types_boto3_custom-1.35.82-py3-none-any.whl" }
